--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/poktil/telegram-bot#readme",
   "dependencies": {
     "dotenv": "^17.2.3",
+    "firebase-admin": "^13.6.1",
     "telegraf": "^4.16.3"
   }
 }
