--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   },
   "homepage": "https://github.com/poktil/telegram-bot#readme",
   "dependencies": {
+    "@supabase/supabase-js": "^2.95.3",
     "dotenv": "^17.2.3",
-    "firebase-admin": "^13.6.1",
     "telegraf": "^4.16.3"
   }
 }
